fix bug and delete function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>ALi's Todo List</h1>
   </header>
   <form class="" action="index.html" method="post">
-    <input type="text" class="todo-input" name="" value="">
+    <input type="text" class="todo-input">
     <button class="todo-button" type="button" name="button">
       <i class="fas fa-plus-square"></i>
     </button>
